--- a/scss/_secAccess.scss
+++ b/scss/_secAccess.scss
@@ -39,7 +39,7 @@
         // top: 120%;
         object-fit: contain;
         z-index: -100;
-        @media (width <=1000px) {
+        @media (max-width:1000px) {
             flex-direction: column;
             align-items: center;
             top: 70%;
@@ -55,7 +55,7 @@
         // position: relative;
         // bottom: 18rem;
 
-        @media (width <=1000px) {
+        @media (max-width:1000px) {
             flex-direction: column;
             align-items: center;
         }
@@ -67,7 +67,7 @@
                 height: 500px;
                 border-radius: root.$borderR;
 
-                @media (width <=800px) {
+                @media (max-width:800px) {
                     max-width: 100%;
                     max-height: 100%;
                 }
