--- a/scss/_secMenu.scss
+++ b/scss/_secMenu.scss
@@ -34,7 +34,7 @@
         justify-content: center;
         gap: 1rem;
 
-        @media (width <=1330px) {
+        @media (max-width:1330px) {
             flex-direction: column;
             align-items: center;
         }
@@ -64,7 +64,7 @@
                     object-fit: cover;
                     object-position: right;
 
-                    @media (width <=420px) {
+                    @media (max-width:420px) {
                         width: 220px;
                         height: 350px;
                     }
