--- a/scss/_secSns.scss
+++ b/scss/_secSns.scss
@@ -23,7 +23,7 @@
         gap:2rem;
         margin: 0rem 2rem 2rem 2rem;
 
-        @media (width <= 800px){
+        @media (max-width:800px){
     
             flex-direction: column;
             align-items: center;
